# course_work_5_working_with_databases

./: .gitignore  README.md  main.py  pyproject.toml  queries.sql
src/: DBManager.py  functions.py  main.py  queries.sql
